--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <app-hero></app-hero>
 <div class="container">
-  <div class="xl:!px-[1.25rem] lg:!px-[1.25rem] !mb-[4.5rem] xl:!mb-[7rem] lg:!mb-[7rem] md:!mb-[7rem]">
-    <div class="flex flex-wrap mx-0 md:mx-[-20px] lg:mx-[-20px] xl:mx-[-35px] mt-[-40px] items-center">
+  <div class="xl:!px-[1.25rem] lg:!px-[1.25rem] !mb-[4.5rem] xl:!mb-[7rem] lg:!mb-[7rem] md:!mb-[7rem] scrolling-wrapper">
+    <div class="flex flex-wrap mx-0 md:mx-[-20px] lg:mx-[-20px] xl:mx-[-35px] mt-[-40px] items-center justify-center">
       <div
         class="w-4/12 xl:w-2/12 lg:w-2/12 md:w-2/12 flex-[0_0_auto] px-[15px]  md:px-[20px] lg:px-[20px] xl:px-[35px] mt-[40px] max-w-full">
         <figure class="px-5 md:!px-0 lg:!px-2 xl:!px-3 xxl:!px-4"><img src="assets/img/brands/c1.png" alt="image">
@@ -43,8 +43,8 @@
   </div>
 </div>
 
-
-<section class=" !bg-[#a8ed9f] h-[22%] wrapper angled lower-start ">
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#3cdfff" fill-opacity="1" d="M0,224L10,240C20,256,40,288,60,304C80,320,100,320,120,293.3C140,267,160,213,180,165.3C200,117,220,75,240,58.7C260,43,280,53,300,90.7C320,128,340,192,360,192C380,192,400,128,420,112C440,96,460,128,480,154.7C500,181,520,203,540,202.7C560,203,580,181,600,181.3C620,181,640,203,660,218.7C680,235,700,245,720,261.3C740,277,760,299,780,266.7C800,235,820,149,840,122.7C860,96,880,128,900,144C920,160,940,160,960,154.7C980,149,1000,139,1020,144C1040,149,1060,171,1080,160C1100,149,1120,107,1140,106.7C1160,107,1180,149,1200,160C1220,171,1240,149,1260,138.7C1280,128,1300,128,1320,122.7C1340,117,1360,107,1380,112C1400,117,1420,139,1430,149.3L1440,160L1440,320L1430,320C1420,320,1400,320,1380,320C1360,320,1340,320,1320,320C1300,320,1280,320,1260,320C1240,320,1220,320,1200,320C1180,320,1160,320,1140,320C1120,320,1100,320,1080,320C1060,320,1040,320,1020,320C1000,320,980,320,960,320C940,320,920,320,900,320C880,320,860,320,840,320C820,320,800,320,780,320C760,320,740,320,720,320C700,320,680,320,660,320C640,320,620,320,600,320C580,320,560,320,540,320C520,320,500,320,480,320C460,320,440,320,420,320C400,320,380,320,360,320C340,320,320,320,300,320C280,320,260,320,240,320C220,320,200,320,180,320C160,320,140,320,120,320C100,320,80,320,60,320C40,320,20,320,10,320L0,320Z"></path></svg>
+<section>
   <div class="container pt-[4.5rem] xl:pt-24 lg:pt-24 md:pt-24">
     <div class="flex flex-wrap mx-[-15px] !text-center ">
       <div
@@ -143,7 +143,7 @@
     <div class="flex flex-wrap mx-[-15px] xl:mx-[-35px] lg:mx-[-20px] mt-[-50px] !mb-8 items-center">
       <div
         class="xl:w-7/12 lg:w-7/12 w-full flex-[0_0_auto] xl:px-[35px] lg:px-[20px] px-[15px] mt-[50px] max-w-full xl:!order-2 lg:!order-2">
-        <figure class="m-0 p-0"><img class="w-auto" src="assets/img/illustrations/i3.png"
+        <figure class="m-0 p-0"><img class="w-auto" src="../../../assets/asset 28.svg"
             srcset="./assets/img/illustrations/i3@2x.png 2x" alt="image"></figure>
       </div>
       <!--/column -->
@@ -181,13 +181,14 @@
 </section>
 
 <!-- TEAM MEMBERS SECTION -->
-<section class="wrapper !bg-[#D7B4F3] ">
+<section class="wrapper ">
+
   <div class="container py-[4.5rem] xl:!py-24 lg:!py-24 md:!py-24">
     <div class="flex flex-wrap mx-[-15px] xl:mx-[-35px] lg:mx-[-20px] mt-[-50px] xl:mt-0 lg:mt-0 mb-12  ">
       <div
         class="xl:w-4/12 lg:w-4/12 w-full flex-[0_0_auto] xl:px-[35px] lg:px-[20px] px-[15px] mt-[50px] xl:mt-0 lg:mt-0 max-w-full">
         <h3
-          class="xl:text-[2rem] text-[calc(1.325rem_+_0.9vw)] !leading-[1.2] text-black font-DMSerif font-normal tracking-normal mb-3 xl:pr-10">
+          class="xl:text-[2rem] text-[calc(1.325rem_+_0.9vw)] !leading-[1.2] text-black font-normal tracking-normal mb-3 xl:pr-10">
           We are proud of our creative team</h3>
         <p class="lead text-[1rem] text-black  !mb-0 xxl:pr-10">Just sit back and relax while we take care of your
           business needs.</p>
@@ -335,5 +336,24 @@
 
     <!-- /div -->
   </div>
+   
   <!-- /.container -->
 </section>
+<div
+class="flex gap-x-5 items-center justify-center "
+>
+<span
+  ><a
+    href="#"
+    class="btn btn-lg btn-outline-aqua !bg-[#3cdfff] text-white hover:!text-black"
+    >Schedule Call</a
+  ></span
+>
+<span
+  ><a
+    href="#"
+    class="btn btn-lg btn-outline-aqua !bg-[#4bd544] text-white hover:!text-black"
+    >Hire us on Upwork</a
+  ></span
+>
+</div>
