--- a/src/app/components/hero/hero.component.css
+++ b/src/app/components/hero/hero.component.css
@@ -1,70 +1,44 @@
-@keyframes slideInImage {
+@keyframes float {
+  0% {
+    background-position: 50% 0%;
+  }
+  50% {
+    background-position: 50% 10%;
+  }
+  100% {
+    background-position: 50% 0%;
+  }
+}
+
+
+.animate-svg {
+  animation: animate-svg 1.3s linear;
+}
+
+.circle-svg{
+  background-image: url('../../../assets/asset 8.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  animation: circle-svg 3s ease-in-out infinite;
+}
+
+@keyframes circle-svg {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-50px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+@keyframes animate-svg {
   from {
     transform: translateX(100%);
-    opacity: 0;
   }
   to {
     transform: translateX(0);
-    opacity: 1;
   }
-}
-
-@keyframes fadeInImage {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes slideInClients {
-  from {
-    transform: translateX(-100%);
-    opacity: 0;
-  }
-  to {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-
-@keyframes fadeInClients {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-.image-slide-in {
-  animation: slideInImage 2s ease-in-out forwards;
-}
-
-.image-fade-in {
-  animation: fadeInImage 2s ease-in-out forwards;
-}
-
-.clients-slide-in {
-  animation: slideInClients 2s ease-in-out 1.5s backwards; 
-}
-
-.clients-fade-in {
-  animation: fadeInClients 2s ease-in-out 1.5s backwards; 
-}
-
-.gif-background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: -1;
-  opacity: 0.7; /* Adjust opacity as needed */
-}
-.card-container {
-  position: relative;
-  overflow: hidden;
 }
