--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,56 +1,77 @@
-<header class="relative  py-[12px] !bg-[#fff]  ">
-  <nav class="navbar navbar-expand-lg ">
+<header class="relative py-[12px] !bg-[#fff]">
+  <nav class="navbar navbar-expand-lg">
     <div class="container xl:flex-row lg:flex-row !flex-nowrap items-center">
       <div class="navbar-brand w-full">
         <a href="index.html">
-          <img src="../../../assets/logo.jpg" class="w-10 h-10 object-cover rounded-lg" alt="Saarz">
+          <img
+            src="../../../assets/logo.jpg"
+            class="w-10 h-10 object-cover rounded-lg"
+            alt="Saarz"
+          />
         </a>
       </div>
       <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
-        <div class="offcanvas-header xl:hidden lg:hidden flex items-center justify-between flex-row p-6">
-          <h3 class="text-white xl:text-[1.5rem] !text-[calc(1.275rem_+_0.3vw)] !mb-0">Saarz</h3>
+        <div
+          class="offcanvas-header xl:hidden lg:hidden flex items-center justify-between flex-row p-6"
+        >
+          <h3
+            class="text-white xl:text-[1.5rem] !text-[calc(1.275rem_+_0.3vw)] !mb-0"
+          >
+            Saarz
+          </h3>
         </div>
-        <div class="offcanvas-body xl:!ml-auto lg:!ml-auto flex flex-col !h-full">
+        <div
+          class="offcanvas-body xl:!ml-auto lg:!ml-auto flex flex-col !h-full"
+        >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link font-bold tracking-[-0.01rem] hover:!text-[#54a8c7] hover:border-b-2 hover:border-[#54a8c7] py-2  focus:border-b-2 focus:border-[#54a8c7] focus:text-[#54a8c7]
-              after:!text-[#54a8c7]"
-                href="#">Home</a>
+              <a
+              class="nav-link  tracking-[-0.01rem] hover:border-[#3cdfff] py-2 focus:border-b-2 focus:border-[#3cdfff] focus:text-[#3cdfff] hover:!text-[#3cdfff] hover:border-b-2 after:!text-[#3cdfff]"
+              href="#"
+                >Home</a
+              >
             </li>
-         
+
             <li class="nav-item">
-              <a routerLink = '/portfolio' class="nav-link font-bold tracking-[-0.01rem] hover:border-[#54a8c7] py-2  focus:border-b-2 focus:border-[#54a8c7] focus:text-[#54a8c7]
-              hover:!text-[#54a8c7] hover:border-b-2 after:!text-[#54a8c7]" 
-                >Portfolio</a>
+              <a
+                routerLink="/portfolio"
+                class="nav-link  tracking-[-0.01rem] hover:border-[#3cdfff] py-2 focus:border-b-2 focus:border-[#3cdfff] focus:text-[#3cdfff] hover:!text-[#3cdfff] hover:border-b-2 after:!text-[#3cdfff]"
+                >Portfolio</a
+              >
             </li>
             <li class="nav-item">
-              <a routerLink = '/contact-us' class="nav-link font-bold tracking-[-0.01rem] hover:border-[#54a8c7] hover:!text-[#54a8c7] hover:border-b-2  py-2 focus:border-b-2 focus:border-[#54a8c7] focus:text-[#54a8c7]
-              after:!text-[#54a8c7]"             
-                >Contact</a>
+              <a
+                routerLink="/contact-us"
+                class="nav-link  tracking-[-0.01rem] hover:border-[#3cdfff] py-2 focus:border-b-2 focus:border-[#3cdfff] focus:text-[#3cdfff] hover:!text-[#3cdfff] hover:border-b-2 after:!text-[#3cdfff]"
+                >Contact</a
+              >
             </li>
             <li class="nav-item">
-              <a routerLink = '/careers' class="nav-link font-bold tracking-[-0.01rem] hover:border-[#54a8c7] py-2  focus:border-b-2 focus:border-[#54a8c7] focus:text-[#54a8c7]
- hover:!text-[#54a8c7] hover:border-b-2 after:!text-[#54a8c7]" href="#"
-                >Careers</a>
+              <a
+                routerLink="/careers"
+                class="nav-link  tracking-[-0.01rem] hover:border-[#3cdfff] py-2 focus:border-b-2 focus:border-[#3cdfff] focus:text-[#3cdfff] hover:!text-[#3cdfff] hover:border-b-2 after:!text-[#3cdfff]"
+                href="#"
+                >Careers</a
+              >
             </li>
           </ul>
         </div>
       </div>
       <div class="navbar-other lg:!ml-4 xl:!ml-4">
         <ul class="navbar-nav !flex- row !items-center !ml-auto">
-         
           <li class="nav-item hidden xl:block lg:block md:block">
-            <a href="#"
-              class="btn btn-sm btn-aqua text-white !bg-[#3cdfff] border-[#3cdfff] hover:text-white hover:bg-[#61F2F5]  focus:shadow-[#b1e6fb] active:text-white active:bg-[#54a8c7] active:border-[#54a8c7] "
-             >Get Free Consultation</a>
+            <a
+              href="#"
+              class="btn btn-sm btn-aqua text-white !bg-[#3cdfff] border-[#3cdfff] hover:text-white hover:bg-[#61F2F5] focus:shadow-[#b1e6fb] active:text-white active:bg-[#54a8c7] active:border-[#54a8c7]"
+              >Free Consultation</a
+            >
           </li>
-          <li class="nav-item xl:hidden lg:hidden">
+          <!-- <li class="nav-item xl:hidden lg:hidden">
             <button class="hamburger offcanvas-nav-btn"><span></span></button>
-          </li>
+          </li> -->
         </ul>
         <!-- /.navbar-nav -->
       </div>
     </div>
   </nav>
- 
 </header>
